<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Photo Text</string>
    <string name="hello_world">Hello world!</string>
    <string name="done">Done</string>
    <string name="action_settings">Settings</string>
    <string name="flash_mode_auto">Auto Flash</string>
    <string name="flash_mode_on">Flash on</string>
    <string name="flash_mode_off">Flash off</string>
    <string name="delete">Delete</string>


    <string name="ranklabel">Rank: </string>
    <string name="countrylabel">Country: </string>
    <string name="populationlabel">Population: </string>
    <string name="image_description">Flag</string>

    <string name="menu_settings">Settings</string>
    <string name="red_string">Select</string>
    <string name="green_string">Drive</string>
    <string name="yellow_string">Drive File</string>
    <string name="blue_string">Uninstall</string>
    <string name="myCoolButton">mine</string>
    <string name="driveInit">initial</string>
    <string name="title_preferences">Preferences</string>
    <string name="name_of_your_app">Photo Text</string>
</resources>
