<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.prosen.menuexample.MenuExampleActivity">
    <item
        android:id="@+id/menu_edit"
        android:orderInCategory="1"
        android:title="@string/red_string"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_smartGroup"
        android:orderInCategory="2"
        android:title="@string/green_string"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_LockApps"
        android:orderInCategory="3"
        android:title="@string/yellow_string"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_Uninstall"
        android:orderInCategory="5"
        android:title="@string/blue_string"
        app:showAsAction="never" />

</menu>